@@ -82,3 +82,4 @@ Jan 7(Home): Pipefix working. need to fix minor bugs, add effect in basement, fi
 Jan 8: Added simple ending when we go to bath, technically everything works just need to add details. Gonna close fixpipe branch.
 Jan 9: Added branch finishing up
 Jan 12: added hint sheet for lamp puzzle, drawed animation for pipe leaking.
+Jan 13: added a new player model concept, implemented pipe leaking animation, minor bug fixes along the way.
